--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
 </section>
 
 <!------Javascript to Toggle Menu----->
-    <script>
-        var navLinks = document.getElementById("navLinks");
-        function showMenu(){
-            navLinks.style.right = "0";
-        }
-        function hideMenu(){
-            navLinks.style.right = "-200px";
-        }
+    <script src="/main.js">
+        //var navLinks = document.getElementById("navLinks");
+        // function showMenu(){
+        //     navLinks.style.right = "0";
+        // }
+        // function hideMenu(){
+        //     navLinks.style.right = "-200px";
+        // }
     </script>
 </body>
 </html>
