--- a/university/index.html
+++ b/university/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eduford</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -15,15 +15,15 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="img/logo.png" alt=""></a>
+            <a href="/university/index.html"><img src="/img/logo.png" alt=""></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu();"></i>
                 <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/about.html">ABOUT</a></li>
-                    <li><a href="/course.html">COURSE</a></li>
-                    <li><a href="/blog.html">BLOG</a></li>
-                    <li><a href="/contact.html">CONTACT</a></li>
+                    <li><a href="/university/index.html">HOME</a></li>
+                    <li><a href="/university/about.html">ABOUT</a></li>
+                    <li><a href="/university/course.html">COURSE</a></li>
+                    <li><a href="/university/blog.html">BLOG</a></li>
+                    <li><a href="/university/contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu();"></i>
@@ -61,19 +61,19 @@
 
         <div class="row">
             <div class="campus-col">
-                <img src="img/london.png" alt="London">
+                <img src="/img/london.png" alt="London">
                 <div class="layer">
                     <h3>LONDON</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="img/newyork.png" alt="Newyork">
+                <img src="/img/newyork.png" alt="Newyork">
                 <div class="layer">
                     <h3>NEWYORK</h3>
                 </div>
             </div>            
             <div class="campus-col">
-                <img src="img/washington.png" alt="Washington">
+                <img src="/img/washington.png" alt="Washington">
                 <div class="layer">
                     <h3>WASHINTON</h3>
                 </div>
@@ -88,17 +88,17 @@
 
         <div class="row">
             <div class="facilities-col">
-                <img src="img/library.png" alt="Library">
+                <img src="/img/library.png" alt="Library">
                 <h3>World Class Library</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur voluptatibus amet, cum doloremque reprehenderit veniam tempora repellat quisquam officia illum iste voluptatum, dolorem non a et similique ab! Cum, pariatur.</p>
             </div>
             <div class="facilities-col">
-                <img src="img/basketball.png" alt="Basketball">
+                <img src="/img/basketball.png" alt="Basketball">
                 <h3>Lagest Play Ground</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur voluptatibus amet, cum doloremque reprehenderit veniam tempora repellat quisquam officia illum iste voluptatum, dolorem non a et similique ab! Cum, pariatur.</p>
             </div>
             <div class="facilities-col">
-                <img src="img/cafeteria.png" alt="Cafeteria">
+                <img src="/img/cafeteria.png" alt="Cafeteria">
                 <h3>Tasty and Healthy Food</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur voluptatibus amet, cum doloremque reprehenderit veniam tempora repellat quisquam officia illum iste voluptatum, dolorem non a et similique ab! Cum, pariatur.</p>
             </div>
@@ -111,7 +111,7 @@
 
         <div class="row">
             <div class="testimonials-col">
-                <img src="img/user1.jpg">
+                <img src="/img/user1.jpg">
                 <div>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, officiis omnis? Aut, incidunt eveniet. Minima quis aut id repellendus, cumque saepe suscipit, nam aliquid animi voluptates ipsa sed repellat sit!</p>
                     <h3>Christine Berley</h3>
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="testimonials-col">
-                <img src="img/user2.jpg">
+                <img src="/img/user2.jpg">
                 <div>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, officiis omnis? Aut, incidunt eveniet. Minima quis aut id repellendus, cumque saepe suscipit, nam aliquid animi voluptates ipsa sed repellat sit!</p>
                     <h3>Christine Berley</h3>
