--- a/university/blog.html
+++ b/university/blog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Eduford</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -19,11 +19,11 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu();"></i>
                 <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/about.html">ABOUT</a></li>
-                    <li><a href="/course.html">COURSE</a></li>
-                    <li><a href="/blog.html">BLOG</a></li>
-                    <li><a href="/contact.html">CONTACT</a></li>
+                    <li><a href="/university/index.html">HOME</a></li>
+                    <li><a href="/university/about.html">ABOUT</a></li>
+                    <li><a href="/university/course.html">COURSE</a></li>
+                    <li><a href="/university/blog.html">BLOG</a></li>
+                    <li><a href="/university/contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu();"></i>
@@ -35,7 +35,7 @@
     <section class="blog-content">
         <div class="row">
             <div class="blog-left">
-                <img src="img/certificate.jpg" alt="Certificate">
+                <img src="/img/certificate.jpg" alt="Certificate">
                 <h2>Our Certificate & Online Programs For 2021</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero corporis veritatis modi, facere, officiis molestias labore temporibus natus doloremque corrupti incidunt fuga vitae itaque consequuntur at rerum dolor hic velit?</p>
                 <br>
