--- a/university/course.html
+++ b/university/course.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course of Eduford</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -19,11 +19,11 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu();"></i>
                 <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/about.html">ABOUT</a></li>
-                    <li><a href="/course.html">COURSE</a></li>
-                    <li><a href="/blog.html">BLOG</a></li>
-                    <li><a href="/contact.html">CONTACT</a></li>
+                    <li><a href="/university/index.html">HOME</a></li>
+                    <li><a href="/university/about.html">ABOUT</a></li>
+                    <li><a href="/university/course.html">COURSE</a></li>
+                    <li><a href="/university/blog.html">BLOG</a></li>
+                    <li><a href="/university/contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu();"></i>
@@ -58,17 +58,17 @@
 
         <div class="row">
             <div class="facilities-col">
-                <img src="img/library.png" alt="Library">
+                <img src="/img/library.png" alt="Library">
                 <h3>World Class Library</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur voluptatibus amet, cum doloremque reprehenderit veniam tempora repellat quisquam officia illum iste voluptatum, dolorem non a et similique ab! Cum, pariatur.</p>
             </div>
             <div class="facilities-col">
-                <img src="img/basketball.png" alt="Basketball">
+                <img src="/img/basketball.png" alt="Basketball">
                 <h3>Lagest Play Ground</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur voluptatibus amet, cum doloremque reprehenderit veniam tempora repellat quisquam officia illum iste voluptatum, dolorem non a et similique ab! Cum, pariatur.</p>
             </div>
             <div class="facilities-col">
-                <img src="img/cafeteria.png" alt="Cafeteria">
+                <img src="/img/cafeteria.png" alt="Cafeteria">
                 <h3>Tasty and Healthy Food</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur voluptatibus amet, cum doloremque reprehenderit veniam tempora repellat quisquam officia illum iste voluptatum, dolorem non a et similique ab! Cum, pariatur.</p>
             </div>
