--- a/html_css/pages/course.html
+++ b/html_css/pages/course.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduford</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>Course of Eduford</title>
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -13,28 +13,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <section class="header">
+    <section class="sub-header">
         <nav>
-            <a href="/university/index.html"><img src="/img/logo.png" alt=""></a>
+            <a href="../pages/index.html"><img src="../img/logo.png" alt=""></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu();"></i>
                 <ul>
-                    <li><a href="/university/index.html">HOME</a></li>
-                    <li><a href="/university/about.html">ABOUT</a></li>
-                    <li><a href="/university/course.html">COURSE</a></li>
-                    <li><a href="/university/blog.html">BLOG</a></li>
-                    <li><a href="/university/contact.html">CONTACT</a></li>
+                    <li><a href="../pages/index.html">HOME</a></li>
+                    <li><a href="../pages/about.html">ABOUT</a></li>
+                    <li><a href="../pages/course.html">COURSE</a></li>
+                    <li><a href="../pages/blog.html">BLOG</a></li>
+                    <li><a href="../pages/contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu();"></i>
         </nav>
-        <div class="text-box">
-            <h1>World's Biggest University</h1>
-            <p>Making website is now one of the easiest thing in the world. You just need to learn HTML, CSS, <br> Javascript and you are good to go.</p>
-            <a href="#" class="hero-btn">Visit Us To Know More</a>
-        </div>
+        <h1>Our Course</h1>
     </section>
-<!-----Coures----->
+<!----- course ----->
     <section class="course">
         <h1>Coures We Offer</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -54,33 +50,7 @@
             </div>
         </div>
     </section>
-<!------Campus--------->
-    <section class="campus">
-        <h1>Our Global Campus</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
 
-        <div class="row">
-            <div class="campus-col">
-                <img src="/img/london.png" alt="London">
-                <div class="layer">
-                    <h3>LONDON</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="/img/newyork.png" alt="Newyork">
-                <div class="layer">
-                    <h3>NEWYORK</h3>
-                </div>
-            </div>            
-            <div class="campus-col">
-                <img src="/img/washington.png" alt="Washington">
-                <div class="layer">
-                    <h3>WASHINTON</h3>
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
 <!-------Facilities--------->
     <section class="facilities">
         <h1>Our Facilities</h1>
@@ -88,61 +58,22 @@
 
         <div class="row">
             <div class="facilities-col">
-                <img src="/img/library.png" alt="Library">
+                <img src="../img/library.png" alt="Library">
                 <h3>World Class Library</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur voluptatibus amet, cum doloremque reprehenderit veniam tempora repellat quisquam officia illum iste voluptatum, dolorem non a et similique ab! Cum, pariatur.</p>
             </div>
             <div class="facilities-col">
-                <img src="/img/basketball.png" alt="Basketball">
+                <img src="../img/basketball.png" alt="Basketball">
                 <h3>Lagest Play Ground</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur voluptatibus amet, cum doloremque reprehenderit veniam tempora repellat quisquam officia illum iste voluptatum, dolorem non a et similique ab! Cum, pariatur.</p>
             </div>
             <div class="facilities-col">
-                <img src="/img/cafeteria.png" alt="Cafeteria">
+                <img src="../img/cafeteria.png" alt="Cafeteria">
                 <h3>Tasty and Healthy Food</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur voluptatibus amet, cum doloremque reprehenderit veniam tempora repellat quisquam officia illum iste voluptatum, dolorem non a et similique ab! Cum, pariatur.</p>
             </div>
         </div>
     </section>
-<!-------testimonials-------->
-    <section class="testimonials">
-        <h1>What Our Student Says</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-
-        <div class="row">
-            <div class="testimonials-col">
-                <img src="/img/user1.jpg">
-                <div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, officiis omnis? Aut, incidunt eveniet. Minima quis aut id repellendus, cumque saepe suscipit, nam aliquid animi voluptates ipsa sed repellat sit!</p>
-                    <h3>Christine Berley</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-            </div>
-            <div class="testimonials-col">
-                <img src="/img/user2.jpg">
-                <div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, officiis omnis? Aut, incidunt eveniet. Minima quis aut id repellendus, cumque saepe suscipit, nam aliquid animi voluptates ipsa sed repellat sit!</p>
-                    <h3>Christine Berley</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-            </div>
-        </div>
-    </section>
-
-<!-- ----- Call To Action ----- -->
-    <section class="cta">
-        <h1>Enroll for our various online course Anywhere Form The Worls</h1>
-        <a href="#" class="hero-btn">CONTACT US</a>
-    </section>
-
 <!-- ----- Footer ----- -->
 <section class="footer">
     <h4>About Us</h4>
