--- a/html_css/pages/index.html
+++ b/html_css/pages/index.html
@@ -15,7 +15,10 @@
 <body>
     <section class="header">
         <nav>
-            <a href="../pages/index.html"><img src="../img/logo.png" alt=""></a>
+            <div class="nav-logo">
+                <a href="../pages/index.html"><img src="../img/logo.png" alt=""></a>
+            </div>
+
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu();"></i>
                 <ul>
@@ -61,21 +64,21 @@
 
         <div class="row">
             <div class="campus-col">
-                <img src="../img/london.png" alt="London">
+                <img src="../img/london.png" alt="hanoi">
                 <div class="layer">
                     <h3>LONDON</h3>
                 </div>
-            </div>
+            </div>    
             <div class="campus-col">
-                <img src="../img/newyork.png" alt="Newyork">
+                <img src="../img/newyork.png" alt="NewYork">
                 <div class="layer">
                     <h3>NEWYORK</h3>
                 </div>
-            </div>            
+            </div>      
             <div class="campus-col">
                 <img src="../img/washington.png" alt="Washington">
                 <div class="layer">
-                    <h3>WASHINTON</h3>
+                    <h3>WASHINGTON</h3>
                 </div>
             </div>
         </div>
