--- a/html_css/pages/blog.html
+++ b/html_css/pages/blog.html
@@ -15,7 +15,9 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="../pages/index.html"><img src="../img/logo.png" alt=""></a>
+            <div class="nav-logo">
+                <a href="../pages/index.html"><img src="../img/logo-ptit.png" alt=""></a>
+            </div>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu();"></i>
                 <ul>
