--- a/html_css/pages/contact.html
+++ b/html_css/pages/contact.html
@@ -15,7 +15,9 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="../pages/index.html"><img src="../img/logo.png" alt=""></a>
+            <div class="nav-logo">
+                <a href="../pages/index.html"><img src="../img/logo-ptit.png" alt=""></a>
+            </div>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu();"></i>
                 <ul>
@@ -32,7 +34,7 @@
     </section>
 <!----- about us content----->
     <section class="location">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497698.65866069566!2d77.35143952112935!3d12.954517718885736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2zQmVuZ2FsdXJ1LCBLYXJuYXRha2EsIOG6pG4gxJDhu5k!5e0!3m2!1svi!2s!4v1626926493084!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.3024241109056!2d105.78573631546342!3d20.980510994798387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135accdd8a1ad71%3A0xa2f9b16036648187!2zSOG7jWMgdmnhu4duIEPDtG5nIG5naOG7hyBCxrB1IGNow61uaCB2aeG7hW4gdGjDtG5n!5e0!3m2!1svi!2s!4v1628649155351!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <section class="contact-us">
